fix: ajustes no security e retorno da consulta dos pagamentos