@@ -1,21 +1,20 @@
 package br.fiap.hackathonpostech.application.usecase;
 
-import br.fiap.hackathonpostech.application.exceptions.*;
+import static br.fiap.hackathonpostech.domain.enums.MetodoPagamentoEnum.CARTAO_CREDITO;
+import static br.fiap.hackathonpostech.domain.enums.StatusEnum.APROVADO;
+import static br.fiap.hackathonpostech.domain.enums.StatusEnum.REJEITADO;
+
+import br.fiap.hackathonpostech.application.exceptions.CartaoNaoExisteException;
+import br.fiap.hackathonpostech.application.exceptions.ClienteNaoExisteException;
+import br.fiap.hackathonpostech.application.exceptions.LimiteExcedidoCartaoException;
+import br.fiap.hackathonpostech.application.exceptions.PagamentoNaoEncontradoException;
 import br.fiap.hackathonpostech.application.gateway.PagamentoGateway;
 import br.fiap.hackathonpostech.domain.entity.Cartao;
 import br.fiap.hackathonpostech.domain.entity.Cliente;
 import br.fiap.hackathonpostech.domain.entity.Pagamento;
-
-import java.time.YearMonth;
-import java.time.format.DateTimeFormatter;
-import java.time.format.DateTimeParseException;
 import java.util.List;
 import java.util.UUID;
 import java.util.stream.Collectors;
-
-import static br.fiap.hackathonpostech.domain.enums.MetodoPagamentoEnum.CARTAO_CREDITO;
-import static br.fiap.hackathonpostech.domain.enums.StatusEnum.APROVADO;
-import static br.fiap.hackathonpostech.domain.enums.StatusEnum.REJEITADO;
 
 public class PagamentoUseCase {
     private final PagamentoGateway pagamentoGateway;
@@ -37,49 +36,14 @@ public class PagamentoUseCase {
                 .findAny()
                 .orElseThrow(() -> new CartaoNaoExisteException("Não existe um cartão com esse número para esse CPF!"));
 
-        validarCodigoCartao(cartao, pagamento.getCvv());
-        validarDataExpiracao(cartao, pagamento.getDataValidade());
+        pagamento.validarCodigoCartao(cartao);
+        pagamento.validarDataExpiracao(cartao);
         validarLimiteDisponivel(cartao, pagamento);
 
         pagamento.setStatus(APROVADO);
         //cartao.setLimite(cartao.getLimite() - pagamento.getValor());
 
         return pagamentoGateway.registrarPagamento(pagamento, cartao);
-    }
-
-    private void validarCodigoCartao(Cartao cartao, String cvv) {
-        if(!cartao.getCvv().equals(cvv)){
-            throw new CodigoCartaoInvalidoException("Código informado inválido!");
-        }
-    }
-
-    private void validarDataExpiracao(Cartao cartao, String dataValidade) {
-
-        if(!cartao.getDataValidade().equals(dataValidade)){
-            throw new ValidadeCartaoException("Data de validade do cartão incorreta!");
-        }
-
-        if(isDataExpirada(cartao.getDataValidade())){
-            throw new ValidadeCartaoException("Data de validade do cartão expirada!");
-        }
-
-    }
-
-    public static boolean isDataExpirada(String dataValidade) {
-        DateTimeFormatter dataFormatada = DateTimeFormatter.ofPattern("MM/yy");
-        YearMonth validade;
-
-        try {
-            validade = YearMonth.parse(dataValidade, dataFormatada);
-        } catch (DateTimeParseException e) {
-            throw new IllegalArgumentException("Formato de data inválido. Deve ser MM/yy.", e);
-        }
-
-        // Obter o ano e mês atual
-        YearMonth anoMesAtual = YearMonth.now();
-
-        // Comparar a data de validade com a data atual
-        return validade.isBefore(anoMesAtual);
     }
 
     private void validarLimiteDisponivel(Cartao cartao, Pagamento pagamento) {
@@ -105,7 +69,7 @@ public class PagamentoUseCase {
 
         List<UUID> cartaoIds = cartoes.stream()
                 .map(Cartao::getId)
-                .collect(Collectors.toList());
+                .toList();
 
         List<Pagamento> pagamentos = pagamentoGateway.buscarPagamentosPorCartoes(cartaoIds);
 
